<resources>
    <string name="instrument_select_text">No Instruments Selected!</string>
    <string name="sample_text">Sample Text</string>
    <string name="app_name">Musician Finder</string>
    <string name="login_text">Login</string>
    <string name="password">password</string>
    <string name="user_name">user name</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_at_least_6_characters">Enter at least 6 characters</string>
    <string name="website_example" translatable="false">www.example.com</string>
    <string name="link">Link</string>
    <string name="name">Name</string>
    <string name="enter_you_name">Enter you full name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="enter_an_address">Enter an address</string>
    <string name="address">Address</string>
    <string name="enter_your_bio">\nEnter your bio\n</string>
    <string name="bio">Bio</string>
    <string name="user_password">123456789</string>
    <string name="example_username">TopMusicianEven</string>
    <string name="age">age</string>
    <string name="instruments">Instruments</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="savechange">Save Change</string>
    <string name="Return">Go back</string>
    <string name="genres">Genres</string>
    <string name="genres_select_text">No Genres Selected!</string>
    <string name="chat_s">Chats</string>
    <string name="choose_weapons">Choose Your Weapons!</string>
    <string name="find_a_band">Find a Band</string>
    <string name="find_a_musician">Find a Musician</string>
    <string name="publish_yourself">Publish yourself</string>
    <string name="welcome_headline" translatable="false">Welcome To\nMusician Finder</string>
    <string name="data_saved">Data been update</string>
    <string name="posts">Posts</string>
    <string name="re_choose_instruments">#Re-Choose All your instruments</string>
    <string name="musician_or_band_question">I\'m / We\'re a:</string>
    <string name="publish_a_post">Publish a Post</string>
    <string name="im_musician">I\'m a Musician</string>
    <string name="were_band">We\'re a Band</string>
    <string name="publish">publish</string>
    <string name="content">Content</string>
    <string name="instrument">Instrument</string>
    <string name="play_location">Play Location</string>
    <string name="type_a_message">Type a message</string>
    <string name="all_posts">All Posts</string>
    <string name="search">Search</string>
    <string name="send">Send a message</string>
    <string name="publisher">Publisher:</string>
    <string name="location">"Location: "</string>
    <string name="publish_instrument">"Instrument: "</string>
    <string name="publish_content">"Content: "</string>
    <string name="genre">Genre</string>
    <string name="search_by">Search By:</string>
    <string name="search_by_location">Search by Location</string>
    <string name="search_by_genre">Search by Genre</string>
    <string name="search_by_instrument">Search by Instrument</string>
    <string name="for_message_press"><![CDATA[for message press =>]]></string>
    <string name="where_you_play">Where Do You Play?</string>
    <string name="what_you_play_instrument">What Instrument?</string>
    <string name="what_you_play_genre">What Genre You\'re Playing?</string>
    <string name="extra_content">What More Would You Like To Say?</string>
    <string name="no_filter">Please Specify A Filter!</string>
    <string name="load_error">Load Error - Please re-enter to this section</string>

</resources>