<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:scrollbars="vertical"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by"
        android:padding="20sp"
        android:textSize="20sp"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/rbLocation"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:id="@+id/rbGenre"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instrument"
            android:id="@+id/rbInstrument"
            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_by_location"
            android:layout_marginLeft="4sp"
            android:id="@+id/edSearch"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/btnSearch"
            android:layout_marginRight="4sp"
            android:layout_marginLeft="4sp"
            />

    </LinearLayout>
    <ListView
        android:padding="20sp"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:id="@+id/l1"
        />
    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="92"
        android:layout_gravity="center"
        android:padding="12sp"
        android:drawablePadding="12sp"
        android:drawableStart="@drawable/back_arrow_icon_layer_list"
        android:background="@drawable/button_custom_background"
        android:text="@string/Return"
        android:layout_marginBottom="60sp"
        />
</LinearLayout>