<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:scrollbars="vertical"
    android:padding="4dp"
    tools:context=".Posts.PublishYourselfActivity"
    >

    <LinearLayout
        android:id="@+id/LinearLayout_PublishPost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/publish_post_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_a_post"
            android:gravity="center"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musician_or_band_question"
            android:textSize="20sp"
            android:layout_margin="6dp"
            android:onClick="mainClick"
            />

        <RadioGroup
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/musician"
                android:id="@+id/single"
                android:checked="true"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/band"
                android:id="@+id/band"
                />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_location"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edPlayLocation"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instrument"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edInstrument"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edContent"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_margin="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish"
                android:layout_gravity="center"
                android:id="@+id/btnPublish"
                android:onClick="mainClick"
                android:layout_weight="1"
                />

            <Button
                android:layout_margin="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/Return"
                android:layout_gravity="center"
                android:id="@+id/btnReturn"
                android:onClick="mainClick"
                android:drawableStart="@drawable/back_arrow_icon_layer_list"
                android:background="@drawable/button_custom_background"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>