<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:paddingTop="36dp"
        >

        <TextView
            android:id="@+id/textView_LoginHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:padding="10sp"
            android:text="@string/login_text"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="200sp"
            android:layout_height="70sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView_LoginHeadline"
            android:layout_marginTop="30sp"
            android:ems="10"
            android:drawableStart="@drawable/custom_username_icon"
            android:drawablePadding="10sp"
            android:background="@drawable/edit_text_custom_input"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="10dp"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="129dp" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="200sp"
            android:layout_height="70sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edUserName"
            android:layout_marginTop="16sp"
            android:ems="10"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="10sp"
            android:background="@drawable/edit_text_custom_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:layout_below="@+id/edPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16sp"
            android:background="@drawable/animation_list_btn_login"
            android:onClick="mainClick"
            android:text="@string/login_text"
            tools:text="login" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>