<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:id="@+id/linearLayout_Profile"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:layout_marginTop="100sp"
        android:weightSum="100"
        android:background="@drawable/greyish_bg"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:paddingRight="8sp"
        android:paddingLeft="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user"
            android:layout_weight="66"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/profile" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Band"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:layout_marginTop="35sp"
        android:weightSum="100"
        android:background="@drawable/greyish_bg"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:paddingRight="8sp"
        android:paddingLeft="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Profile" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/band"
            android:layout_weight="66"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/find_a_band" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Musician"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:layout_marginTop="35sp"
        android:weightSum="100"
        android:background="@drawable/greyish_bg"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:paddingRight="8sp"
        android:paddingLeft="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Band">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/musician_icon"
            android:layout_weight="66"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/find_a_musician" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Publish"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:layout_marginTop="35sp"
        android:weightSum="100"
        android:background="@drawable/greyish_bg"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:paddingRight="8sp"
        android:paddingLeft="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Musician" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/publish_yourself_icon"
            android:layout_marginLeft="2sp"
            android:padding="2sp"
            android:layout_weight="66"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/publish_yourself" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Chat"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:layout_marginTop="35sp"
        android:weightSum="100"
        android:background="@drawable/greyish_bg"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:paddingRight="8sp"
        android:paddingLeft="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Publish">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/chat"
            android:layout_weight="66"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/chat_s" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Posts"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:layout_marginTop="35sp"
        android:background="@drawable/greyish_bg"
        android:paddingLeft="8sp"
        android:paddingTop="5sp"
        android:paddingRight="8sp"
        android:paddingBottom="5sp"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Chat">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/posts"
            android:layout_weight="66"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:gravity="center"
            android:text="Posts"
            android:textSize="25sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
